# RecordIT

./: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml  schema.txt
agent/: ai.py
agent/system_instructions/: system_prompt.txt
app/: ai.py  config.py  connector.py  data_processing.py  db.py  debouncer_pipeline.py  message_handler.py  session.py  utils.py
app/system_instructions/: system_prompt.txt
db_retrieval/: complaint_retrieval.py
logic/: connector.py  data_processing.py  db.py  debouncer_pipeline.py  message_handler.py  session.py  websocket.py
tests/: ai_test.py  complaint_retrieval_test.py  db_test.py  message_handler_test.py  pipeline_test.py  test_connector.py  test_data_processing.py
