[project]
name = "whatsappcomplaintbuilding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "redis>=7.3.0",
    "requests>=2.32.5",
    "streamlit>=1.55.0",
    "uvicorn>=0.41.0",
    "whatsapp-api-client-python>=0.0.53",
]
